xss漏洞开发 -xss漏洞初步实现 -csrf漏洞未完成

--- a/templates/csrf.html
+++ b/templates/csrf.html
@@ -7,5 +7,14 @@
 {% endblock %}
 
 {% block content %}
+<form id="loginTable" method="POST">
+    <input type="text" placeholder="输入用户名" name="username">
+    <input type="password" placeholder="输入密码" name="password">
+    <input type="submit" value="登录">
+</form>
+<div id='csrf'>
+    <div>{{ user['msg'] }}</div>
+    <div>{{ user['info'].signature}}</div>
+</div>
 
 {% endblock %}
