--- a/static/site.css
+++ b/static/site.css
@@ -32,12 +32,7 @@
     border-left: 5px solid #777777;
     background-color:aliceblue;
     box-shadow: 10px 10px 30px #777777;
-}
-
-#loginTable td, #registerTable td{
-    font-family: Verdana;
     font-size: 18px;
-    width: 150px;
     padding: 15px;
     text-align: center;
 }
@@ -68,4 +63,15 @@
     padding: 15px;
     text-align: center;
     border: 5px solid #777777;
+}
+
+#xss {
+    text-align: center;
+    font-size: 20px;
+}
+
+#csrf {
+    margin-top: 50px;
+    text-align: center;
+    font-size: 20px;
 }
