--- a/templates/index.html
+++ b/templates/index.html
@@ -7,5 +7,17 @@
 {% endblock %}
 
 {% block content %}
-
+{% if username == None %}
+<form id="loginTable" method="POST">
+    <!-- 删除csrf_token句即可关闭 -->
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+    <input type="text" placeholder="输入用户名" name="username">
+    <input type="password" placeholder="输入密码" name="password">
+    <input type="submit" value="登录">
+</form>
+{% else %}
+<div id='csrf'>
+    <div>登录成功！{{ username }}</div>
+</div>
+{% endif %}
 {% endblock %}
