csrf漏洞 -改为存在bug的状态 -将各表单下的csrf保护删除

--- a/templates/csrf.html
+++ b/templates/csrf.html
@@ -12,8 +12,7 @@
     <div>已登录：{{ user['username'] }}</div>
     <div>余额：{{ user['money'] }}</div>
     <form class="csrf" method="POST">
-        <!-- 删除csrf_token句即可关闭 -->
-        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+        <!-- 添加csrf_token句即可开启csrf保护 -->
         <input type="text" placeholder="输入转账用户" name="touser">
         <input type="text" placeholder="输入转账金额" name="money">
         <input type="submit" value="确认">
