--- a/templates/fileUpload.html
+++ b/templates/fileUpload.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <form method="post" enctype="multipart/form-data">
-    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+    <!-- 添加csrf_token句即可开启csrf保护 -->
     <input type="file" name="pdf" accept="application/pdf">
     <input type="submit" value="提交">
 </form>
