--- a/templates/fileDownload.html
+++ b/templates/fileDownload.html
@@ -11,6 +11,7 @@
 <ul class="list-group">
     {% for file in files%}
     <!-- 添加csrf_token句即可开启csrf保护 -->
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
     <form method="get" action="/download" enctype="multipart/form-data">
         <li class="list-group-item">
             <label>文件名：</label>
