--- a/templates/fileUpload.html
+++ b/templates/fileUpload.html
@@ -9,6 +9,7 @@
 {% block content %}
 <form method="post" enctype="multipart/form-data">
     <!-- 添加csrf_token句即可开启csrf保护 -->
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
     <input type="file" name="pdf" accept="application/pdf">
     <input type="submit" value="提交">
 </form>
