--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 {% if username == None %}
 <form class="loginTable" method="POST">
     <!-- 添加csrf_token句即可开启csrf保护 -->
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
     <input type="text" placeholder="输入用户名" name="username">
     <input type="password" placeholder="输入密码" name="password">
     <input type="submit" value="登录">
